src/main/resources/css/basicstyle.css
.root{
  -fx-background-color: dimgray;
}
.button {
-fx-background-color: darkgray;
   -fx-text-fill: white;
   -fx-font-family: HP Simplified;
   -fx-pref-width: 15em;
   -fx-pref-height:2em;
}
.label{
  -fx-text-fill: white;
  -fx-font-family: HP Simplified;
}
#wrongCredentialsLabel{
  -fx-text-fill: red;
}
#profileChoiceBox{
  -fx-background-color: darkgray;
  -fx-pref-width: 30em;
}
#profileChoiceBox {
-fx-text-fill: black;
}

